--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,88 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+a {
+  text-decoration: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.title {
+  font-size: 3em;
+  margin-bottom: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
+.subtitle {
+  margin-bottom: 20px;
+}
+
+.content {
+  display: flex;
+}
+
+.sidebar {
+  width: 15vw;
+  border-right: 1px solid black;
   min-height: 100vh;
+}
+
+.sidebar h3 {
+  padding: 10px;
+}
+
+.sidebar ul {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  list-style: none;
+  border-top: 1px black solid;
+  padding: 10px;
+}
+
+.sidebar li {
+  list-style: none;
+  margin-bottom: 10px;
+  border: 1px black solid;
+}
+
+.sidebar li:hover {
+  background-color: lightgray;
+}
+
+.sidebar a {
+  display: block;
+  color: black;
+  min-width: 100px;
+  padding: 10px;
+}
+
+.content-card {
+  width: 85vw;
+  margin: auto;
+  text-align: center;
+  font-size: 60px;
+}
+
+.black-link {
+  color: black;
+}
+
+.btn1 {
+  background-color: steelblue;
+}
+
+.btn1 a {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.btn2 {
+  background-color: rgba(211, 211, 211, 1);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn2 a {
+  color: black;
 }
+
+.btn1:hover, .btn2:hover, .cursor-pointer {
+  cursor: pointer;
+}
+
