--- a/src/components/style/Missions.css
+++ b/src/components/style/Missions.css
@@ -31,3 +31,19 @@
     margin-bottom: 10px;
     border: 1px black solid;
 }
+
+.mission-item-container {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    padding: 20px 0;
+}
+
+.mission-item2 {
+    width: 30%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px black solid;
+}
