--- a/src/components/style/Navbar.css
+++ b/src/components/style/Navbar.css
@@ -3,17 +3,26 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    padding: 20px;
+    height: 60px;
 }
 
 .nav-items {
     display: flex;
     flex-direction: row;
-    width: 30vw;
+    width: 40vw;
     align-items: center;
-    justify-content: space-between;
+
+    height: 100%;
+}
+
+.nav-item-link {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 20%;
 }
 
 .nav-item-link:hover {
-    text-decoration: underline;
+    background-color: lightgray;
 }
