--- a/src/components/style/Welcome.css
+++ b/src/components/style/Welcome.css
@@ -4,13 +4,27 @@
 }
 
 .welcome-intro {
-    background-color: lightgray;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 50vh;
+}
+
+.welcome-intro > img {
+    width: 90%;
+}
+
+.intro-text {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(255, 255, 255, 0.4);
+    height: 30%;
+    width: 35%;
+    border-radius: 5px;
 }
 
 .welcome-about {
@@ -35,3 +49,4 @@
     margin: 50px auto;
     text-align: center;
 }
+
