--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+
 * {
   margin: 0;
   padding: 0;
+  font-family: 'Raleway', sans-serif;
 }
 
 a {
@@ -68,21 +71,33 @@ a {
 
 .btn1 {
   background-color: steelblue;
-}
-
-.btn1 a {
   color: white;
+  border: 2px steelblue solid;
 }
 
 .btn2 {
-  background-color: rgba(211, 211, 211, 1);
+  background-color: rgb(214, 214, 214);
+  color: black;
+  border: 2px rgba(255, 255, 255, 0) solid;
 }
 
-.btn2 a {
+.btn1, .btn2 {
+  font-size: 14px;
+}
+
+.btn1:hover {
+  background-color: white;
   color: black;
+}
+
+.btn2:hover {
+  border-color: black;
 }
 
 .btn1:hover, .btn2:hover, .cursor-pointer {
   cursor: pointer;
 }
 
+.color-dg {
+  color: rgb(68, 68, 68);
+}
